[tool.poetry]
name = "ruthon"
version = "0.1.0"
description = "Russian-friendly python library"
authors = ["Dmitry Shchedrov <shchedrov@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
